<resources>
    <string name="app_name">SmartStreet</string>

    <!--Home Activity-->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="app_title">Smart Street</string>

    <!--Register Activity-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="btn_register">Register</string>
    <string name="register_success_msg">Your are successfully registered!</string>
    <string name="register_failure_msg">Error. Please Try again.</string>

    <!--Login Activity-->
    <string name="btn_login">Login</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="login_failure_msg">Login Failed. Please Try again.</string>

    <!-- MainActivity -->
    <string name="main_activity_title">Smart Street</string>
    <string name="scan_qrcode_msg">Plase scan the QR code to get the details of the tree</string>
    <string name="qrcode_error_msg">"Error reading barcode: %1$s"</string>

    <!-- About Activity -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!-- Map Activity -->
    <string name="map_title">Location</string>
    <string name="location_dialog_msg">Please enable your location</string>
    <string name="location_dialog_ok">OK</string>
    <string name="location_dialog_cancel">Cancel</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAc2g4auUwSBVWvg_oodsmek1YvEdrnFM8
    </string>

    <!--Photo Activity-->
    <string name="photo_title">Photo/Video</string>
    <string name="save_photo_gallery">Save to Gallery</string>
    <string name="save_photo_title">Save Photo</string>
    <string name="save_photo_success_msg">Photo saved to gallery!</string>
    <string name="save_photo_failure_msg">Error. Please Try again.</string>

    <!--Record Screen-->
    <string name="record_activity_title">Record Music</string>

    <!--Share Activity-->
    <string name="share_pic_title">Smart Street Photos</string>

    <!--Photo Detail Activity-->
    <string name="share_title">Share Photo</string>

    <!-- Feedback Activity -->
    <string name="user_comment">Comment</string>
    <string name="user_rating">Rating</string>
    <string name="submit_feedback">Submit</string>
    <string name="feedback_success_msg">Your feedback is sent!</string>
    <string name="feedback_failure_msg">Error. Please Try again.</string>
    <string name="feedback_title">Feedback</string>

    <!--Dialog-->
    <string name="dialog_ok">ok</string>

</resources>
