<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dialog_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tv_main_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">


                <EditText
                    android:id="@+id/login_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:padding="@dimen/et_padding"
                    android:hint="@string/email"
                    android:background="@drawable/etbg_white"
                    android:textCursorDrawable="@null"
                    android:inputType="textEmailAddress"
                    android:gravity="bottom"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tv_body_content" />

                <EditText
                    android:id="@+id/login_pwd_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/et_padding"
                    android:hint="@string/password"
                    android:background="@drawable/etbg_white"
                    android:textCursorDrawable="@null"
                    android:inputType="textPassword"
                    android:gravity="bottom"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tv_body_content"/>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_button"
                        android:text="@string/btn_login"
                        android:textSize="@dimen/button_text"
                        android:textAllCaps="true"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/forgot_pwd_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_margin="20dp"
                        android:text="@string/forgot_pwd"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/link_text" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>